--- a/My Office Add-in/package.json
+++ b/My Office Add-in/package.json
@@ -26,7 +26,6 @@
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
- 
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/polyfill": "^7.11.5",
@@ -55,5 +54,8 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "prettier": "office-addin-prettier-config"
+  "prettier": "office-addin-prettier-config",
+  "dependencies": {
+    "officegen": "^0.6.4"
+  }
 }
